repo/general/01-general-ns-def.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: general-ns
  labels:
    istio-injection: enabled #istio sidecar
