repo/general/httpbin-def.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: general-ns
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: general-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
        livenessProbe: # restart on fail
          httpGet:
            path: /status/200
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 1
        readinessProbe: # application startup
          httpGet:
            path: /status/200
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 1
