repo/general/private-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-priv
  namespace: general-ns
spec:
  hosts:
  - "mydns-dev.com"
  gateways:
  - base-ns/private-gateway
  http:
  - match:
    - uri:
        prefix: /httpbin
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: php-apache
  namespace: general-ns
spec:
  hosts:
  - "mydns-dev.com"
  gateways:
  - base-ns/private-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: php-apache
