repo/general/public-virtual-service-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: general-ns
spec:
  hosts:
  - "mydns.com"
  gateways:
  - base-ns/public-gateway
  http:
  - match:
    - uri:
        prefix: /httpbin
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
